removed fans from navbar, fixed awnings specs

--- a/awnings.html
+++ b/awnings.html
@@ -175,7 +175,7 @@
                   <small>Air-Intake Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="fans" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="fans" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -190,7 +190,7 @@
                   </h5>
                   <small>Cooling Solution</small>
                 </div>
-              </a>
+              </a> -->
               <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
                     <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
                     <div class="dropdown__text">
@@ -313,19 +313,8 @@
         <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </a>
-    <section id="specifications" class="card__grid card__grid--i300">
+    <section id="specifications" class="card__grid card__grid--awnings">
       <div class="card-1 card__list flex flex-col gap--md">
-        <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
-          <h6>Feature Title</h6>
-        </div>
-        <ul class="flex flex-col gap--md">
-          <li class="card__list-item flex">Feature description goes here</li>
-          <li class="card__list-item flex">Feature description goes here</li>
-          <li class="card__list-item flex">Feature description goes here</li>
-        </ul>
-      </div>
-      <div class="card-2 card__list flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
           <img class="icon--md" src="images/icons/icon_fan.svg" alt="Air Intake System Icon" />
           <h6>Air-Intake System</h6>
@@ -338,23 +327,17 @@
           <li class="card__list-item flex">Replacements from Digital Shovel or other vendors</li>
         </ul>
       </div>
-      <div class="card-5 card__list flex flex-col gap--md">
-        <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_mining.svg" alt="Mining Capacity Icon">
-          <h6>Feature Title</h6>
-        </div>
-        <ul class="flex flex-col gap--md">
-          <li class="card__list-item flex">Feature description goes here</li>
-          <li class="card__list-item flex">Feature description goes here</li>
-          <li class="card__list-item flex">Feature description goes here</li>
-        </ul>
-      </div>
-      <div class="card-7 card__data card__secondary flex ai-c gap--md">
+      <div class="card-2 card__data card__secondary flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_fan.svg" alt="Fan Icon">
         <h6>Filter System</h6>
         <h6 class="text--blue">MERV-8</h6>
       </div>
-      <a href="contact" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
+      <div class="card-3 card__data flex ai-c gap--md">
+        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+        <h6 class="text--dark-blue">Approx. Cost</h6>
+        <h6 class="text--blue">$799</h6>
+      </div>
+      <a href="contact" class="card-4 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -363,11 +346,6 @@
             stroke-linejoin="round" />
         </svg>
       </a>
-      <div class="card-9 card__data flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
-        <h6 class="text--dark-blue">Approx. Cost</h6>
-        <h6 class="text--blue">$799</h6>
-      </div>
     </section>
     <section id="bundle" class="bundle">
       <div class="container container--full-width flex flex-col gap--md ai-c jc-c">
