minor fixes to nanopod page

--- a/nanopod.html
+++ b/nanopod.html
@@ -377,7 +377,8 @@
       <div class="card-9 card__data flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6 class="text--dark-blue">Approx. Cost</h6>
-        <h6 class="text--blue">$18,950</h6>
+        <h6 class="text--blue text--strikethrough-small">$19,900</h6>
+        <h6 class="text--blue text--emphasis">$15,000</h6>
       </div>
     </section>
     <section id="bundle" class="bundle">
