update awnings gallery

--- a/awnings.html
+++ b/awnings.html
@@ -246,7 +246,7 @@
           Air-Intake <emphasis class="text--blue">Awnings</emphasis>
         </h1>
       </div>
-      <div class="flex flex-col--sm-tablet ai-c gap--lg">
+      <div class="flex flex-col--md-tablet ai-c gap--lg">
         <img class="hero__product-illustration" src="images/illustrations/awnings.svg"
           alt="Awnings Front Side Illustration">
         <div class="gallery-container">
@@ -257,7 +257,10 @@
             <img class="photo photo-3 photo__awning" src="images/photos/awnings/awning-2.png" alt="Awning Rack Side View">
             <img class="photo photo-4 photo__awning" src="images/photos/awnings/awning-3.png" alt="Awning Rack Back View">
             <img class="photo photo-5 photo__awning" src="images/photos/awnings/awning-4.png" alt="Single Awning Back View">
-            <img class="photo photo-6 photo__awning" src="images/photos/awnings/awning-5.png" alt="Single Awning Side View">
+            <img class="photo photo-6 photo__awning" src="images/photos/awnings/awning-9.png" alt="Single Awning Side View">
+            <img class="photo photo-7 photo__awning" src="images/photos/awnings/awning-6.png" alt="Single Awning Side View">
+            <img class="photo photo-8 photo__awning" src="images/photos/awnings/awning-7.png" alt="Single Awning Side View">
+            <img class="photo photo-9 photo__awning" src="images/photos/awnings/awning-8.png" alt="Single Awning Side View">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
@@ -322,8 +325,8 @@
         <ul class="flex flex-col gap--md">
           <li class="card__list-item flex">Awning-based intake system</li>
           <li class="card__list-item flex">38% increase over standard louver design</li>
-          <li class="card__list-item flex">4" or 2" pleated filters Merv 5 to 15</li>
-          <li class="card__list-item flex">Standard filter size of 24” x 24” x 4”</li>
+          <li class="card__list-item flex">4" pleated filters MERV 5 to 15</li>
+          <li class="card__list-item flex">Standard filter size of 24” x 24” x 4” or 1" x 24" x 24" pre-filter</li>
           <li class="card__list-item flex">Replacements from Digital Shovel or other vendors</li>
         </ul>
       </div>
@@ -335,7 +338,7 @@
       <div class="card-3 card__data flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6 class="text--dark-blue">Approx. Cost</h6>
-        <h6 class="text--blue">$799</h6>
+        <h6 class="text--blue">$500 - $800</h6>
       </div>
       <a href="contact" class="card-4 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
