awnings bundle text change

--- a/awnings.html
+++ b/awnings.html
@@ -230,7 +230,7 @@
           <a href="#specifications" class="subnav__link subnav__link--specs">Specifications</a>
         </li>
         <li>
-          <a href="#bundle" class="subnav__link subnav__link--bundle">Bundle</a>
+          <a href="#bundle" class="subnav__link subnav__link--bundle">Features</a>
         </li>
       </ul>
     </div>
@@ -353,11 +353,8 @@
     <section id="bundle" class="bundle">
       <div class="container container--full-width flex flex-col gap--md ai-c jc-c">
         <h2 class="text__heading">
-          <span class="text--blue">Bundled</span> with your Awnings
+          <span class="text--blue">Features</span> included with your Awnings
         </h2>
-        <p class="text__body text--center">
-          Main container, racking, back-sheets, and Smart PDUs
-        </p>
         <div class="bundle__illustrations">
           <img src="images/illustrations/awnings-front_with-text.svg" alt="Awnings Illustration Front Side">
           <img class="bundle__illustrations--awning-back" src="images/illustrations/awnings-back_with-text.svg"
