changed captions for awning photos

--- a/awnings.html
+++ b/awnings.html
@@ -258,9 +258,9 @@
             <img class="photo photo-4 photo__awning" src="images/photos/awnings/awning-3.png" alt="Awning Rack Back View">
             <img class="photo photo-5 photo__awning" src="images/photos/awnings/awning-4.png" alt="Single Awning Back View">
             <img class="photo photo-6 photo__awning" src="images/photos/awnings/awning-9.png" alt="Single Awning Side View">
-            <img class="photo photo-7 photo__awning" src="images/photos/awnings/awning-6.png" alt="Single Awning Side View">
-            <img class="photo photo-8 photo__awning" src="images/photos/awnings/awning-7.png" alt="Single Awning Side View">
-            <img class="photo photo-9 photo__awning" src="images/photos/awnings/awning-8.png" alt="Single Awning Side View">
+            <img class="photo photo-7 photo__awning" src="images/photos/awnings/awning-6.png" alt="Awnings on the Minipod M300 Side View">
+            <img class="photo photo-8 photo__awning" src="images/photos/awnings/awning-7.png" alt="Awnings on the Minipod M300 Side View">
+            <img class="photo photo-9 photo__awning" src="images/photos/awnings/awning-8.png" alt="Double Awnings Packaged View">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
