updated navbar to add press page

--- a/press.html
+++ b/press.html
@@ -9,20 +9,20 @@
   <!-- Search engine optimization -->
   <meta name="author" content="Digital Shovel">
   <meta name="description"
-    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+    content="Welcome to the Digital Shovel Press Page, where we share the latest news and announcements about the company and our community - new products, partnerships, events, funding and more.">
 
   <!-- Social media tags -->
-  <meta property="og:title" content="Digital Shovel • PDU Giveaway">
+  <meta property="og:title" content="Digital Shovel • Press">
   <meta property="og:description"
-    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+    content="Welcome to the Digital Shovel Press Page, where we share the latest news and announcements about the company and our community - new products, partnerships, events, funding and more.">
   <meta property="og:image" content="/images/backgrounds/meta-image.jpg">
-  <meta property="og:url" content="/contact.html">
+  <meta property="og:url" content="/turnkey-solutions.html">
   <meta property="og:site_name" content="Digital Shovel">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image:alt" content="Digital Shovel Logo">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=2.1">
+  <link rel="stylesheet" href="../dist/style.min.css?v=2.1.1">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -43,10 +43,8 @@
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
-  <script defer src="/app/js/contact.js"></script>
-  <script defer src="/app/js/detect-location.js"></script>
 
-  <title>Digital Shovel • SmartPDU Giveaway</title>
+  <title>Digital Shovel • Press</title>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
@@ -222,52 +220,143 @@
     </div>
   </nav>
 
-  <main class="main">
-    <section class="container flex flex-col--lg-tablet jc-sb gap--md ai-c--tablet">
-      <div class="flex flex-col gap--lg ai-c--tablet">
-        <h1 class="hero__heading">Blockchain <emphasis class="text--blue">Futurist</emphasis>
-        </h1>
-        <img class="hero__company" src="images/illustrations/ds-x-bfc.png"
-          alt="Digital Shovel X Blockchain Futurist Conference">
-        <div class="flex flex-col gap--sm">
-          <h2 class="hero__subheading">Fill the form below to enter the SmartPDU giveaway</h2>
-          <p class="hero__body hero__body--team">
-            Show us the "Thank you!" page after you submit your details and you will receive <strong>FREE</strong>
-            Digital Shovel swag and a chance to win a <strong>FREE</strong> SmartPDU valued at $2500!
-          </p>
-        </div>
+  <main class="main container">
+
+    <section class="flex flex-col gap--xlg">
+      <div class="flex flex-col gap--sm">
+        <h1 class="hero__heading hero__heading--left text--blue">Press</h1>
+        <p class="hero__body hero--home">Welcome to the Digital Shovel Press Page, where we share the latest news and announcements
+          about the company and our community - new products, partnerships, events, funding and more.
+          <br>
+          If you're a journalist, blogger, or member of the media, we're always available to answer your questions, do
+          interviews and provide you with the information you need.
+        </p>
+        <a class="btn btn--primary" href="press">Contact Us
+          <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.49 6L7.5 6" />
+            <path d="M2.5 1L7.95455 6L2.5 11" />
+          </svg>
+        </a>
       </div>
-      <img class="hero__img" src="images/illustrations/spdu-giftbox_v2.png" alt="SmartPDU Giftbox Illustration">
-    </section>
-    <section class="form container">
-      <form action="https://formspree.io/f/myyqewnw" method="POST" autocomplete="on" enctype="multipart/form-data">
-        <div class="fieldset fieldset__3-col flex flex-col">
-          <label class="fieldset__label" for="Full-Name">Full Name</label>
-          <input class="fieldset__text" aria-label="Enter your full name" type="text" id="input-full-name"
-            name="Full-Name" placeholder="John Doe" autocomplete="on" required="required">
+      <div class="flex flex-col--lg-tablet jc-sb gap--lg w-100">
+        <div class="turnkey__mining">
+          <h2>Start mining in</h2>
+          <h3>45 days</h3>
+          <h2>fully turn-key and managed</h4>
         </div>
-        <div class="fieldset fieldset__3-col flex flex-col">
-          <label class="fieldset__label" for="Email">Email</label>
-          <input class="fieldset__text" aria-label="Enter your email" type="email" id="input-email" name="Email"
-            placeholder="johndoe@example.com" autocomplete="on" required="required">
-        </div>
-        <div class="fieldset fieldset__6-col flex flex-col">
-          <label class="fieldset__label" for="Phone">Phone</label>
-          <input class="fieldset__text" aria-label="Enter your phone number" type="tel" id="input-phone" name="Phone"
-            placeholder="+5 (555) 555 5555" autocomplete="on" required="required">
-        </div>
-        <div class="fieldset fieldset__6-col flex flex-col">
-          <label class="fieldset__label">Purpose of Contact</label>
-          <div class="flex">
-            <input type="radio" aria-label="SmartPDU Giveaway" name="Purpose-of-Contact" id="SmartPDU Giveaway"
-              value="SmartPDU Giveaway" required="required">
-            <label class="fieldset__radio fieldset__radio--add-bl-radius fieldset__radio--add-bottom-radius"
-              for="SmartPDU Giveaway">SmartPDU Giveaway</label>
+        <div class="turnkey__watt-price">
+          <img src="images/icons/icon_coin.svg" alt="Dollar Coin">
+          <div class="flex flex-col">
+            <h4>6¢ - 7¢ <small>/ kWh</small></h4>
+            <span>Pricing based on volume</span>
           </div>
         </div>
-        <input type="hidden" name="_next" value="https://digitalshovel.com/thanks">
-        <input aria-label="Submit Button" class="btn btn--primary btn--form" type="submit">
-      </form>
+      </div>
+    </section>
+
+    <div class="animation">
+      <div class="animation__container">
+        <div class="star star-1"></div>
+        <div class="star star-2"></div>
+        <div class="star star-3"></div>
+        <div class="star star-4"></div>
+        <div class="star star-5"></div>
+        <div class="star star-6"></div>
+        <svg version="1.1" width="800px" height="800px" xmlns="http://www.w3.org/2000/svg" x="0" y="0"
+          viewBox="0 0 800 800">
+          <defs>
+            <filter id="mask-filter" filterUnits="userSpaceOnUse" x="0" y="-.5" width="801" height="801">
+              <feColorMatrix values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0" />
+            </filter>
+          </defs>
+          <mask maskUnits="userSpaceOnUse" x="0" y="-.5" width="801" height="801" id="radial-gradient-mask">
+            <g style="filter:url(#mask-filter)">
+              <radialGradient id="radial-gradient" cx="400" cy="400" r="400" gradientUnits="userSpaceOnUse">
+                <stop offset="0" style="stop-color:#fff" />
+                <stop offset=".9" style="stop-color:#000" />
+              </radialGradient>
+              <path style="fill:url(#radial-gradient)" d="M0 0h800v800H0z" />
+            </g>
+          </mask>
+          <g style="mask:url(#radial-gradient-mask)">
+            <g id="vertical">
+              <path class="grid-lines"
+                d="M.5 0v800M40.5 0v800M80.5 0v800M120.5 0v800M160.5 0v800M200.5 0v800M240.5 0v800M280.5 0v800M320.5 0v800M360.5 0v800M400.5 0v800M440.5 0v800M480.5 0v800M520.5 0v800M560.5 0v800M600.5 0v800M640.5 0v800M680.5 0v800M720.5 0v800M760.5 0v800M800.5 0v800" />
+            </g>
+            <g id="horizontal">
+              <path class="grid-lines"
+                d="M800.5 0H.5M800.5 40H.5M800.5 80H.5M800.5 120H.5M800.5 160H.5M800.5 200H.5M800.5 240H.5M800.5 280H.5M800.5 320H.5M800.5 360H.5M800.5 400H.5M800.5 440H.5M800.5 480H.5M800.5 520H.5M800.5 560H.5M800.5 600H.5M800.5 640H.5M800.5 680H.5M800.5 720H.5M800.5 760H.5M800.5 800H.5" />
+            </g>
+          </g>
+        </svg>
+      </div>
+    </div>
+
+    <section class="grid grid__col-6 mtop--xl">
+      <div class="grid-item grid-turnkey__item-1">
+        <img class="grid-item__icon" src="images/icons/icon_land-lease_v2.svg" alt="Land Lease Icon">
+        <h5>Land Lease</h5>
+        <p>2-year lease with flat take-or-pay power contract inclusive. Fully prepped site with pad or piles
+          designed
+          specifically for the Digital Shovel Minipods.</p>
+      </div>
+      <div class="grid-item grid-turnkey__item-2">
+        <img class="grid-item__icon" src="images/icons/icon_transformer-hookup_v2.svg" alt="Transformer Hookup Icon">
+        <h5>Transformer Hookup</h5>
+        <p>Included in this offering is the hook-up of our medium voltage transformer to the low voltage switchgear
+          that
+          will feed the Minipods.</p>
+      </div>
+      <div class="grid-item grid-turnkey__item-3">
+        <img class="grid-item__icon" src="images/icons/icon_pod.svg" alt="Minipod Icon">
+        <h5>300kW Pod</h5>
+        <p>Contracts can be purchased in 300kW increments using our Minipod line. You must take an entire pod and
+          will
+          have VPN access to both the pod's miners, as well as the SmartPDU. At the end of the contract, YOU own the
+          Minipod.</p>
+      </div>
+      <div class="grid-item grid-turnkey__item-4">
+        <img class="grid-item__icon" src="images/icons/icon_forklift.svg" alt="Forklift Icon">
+        <h5>Deployment</h5>
+        <p>Deployment, configuration, and setup of your miners is included in the cost of this contract.</p>
+      </div>
+      <div class="grid-item grid-turnkey__item-5">
+        <img class="grid-item__icon" src="images/icons/icon_truck.svg" alt="Truck Icon">
+        <h5>Delivery</h5>
+        <p>Transportation of the pod to the mining farm is included in the cost of this contract.</p>
+      </div>
+    </section>
+
+    <section class="turnkey__pricing flex flex-col--lg-tablet jc-sb ai-c gap--xlg">
+      <div class="flex flex-col">
+        <h5>Power Deposit</h5>
+        <h2 class="flex ai-end gap--sm">$42k
+          <small class="text--dark-blue">/pod</small>
+        </h2>
+      </div>
+      <h2>+</h2>
+      <div class="flex flex-col">
+        <h5>Pod Deposit</h5>
+        <h2 class="flex ai-end gap--sm">$15k
+          <span class="flex flex-col gap--sm">
+            <small class="text--emphasis text--blue">+$2300/m</small>
+            <small class="text--dark-blue">for 12 months</small>
+          </span>
+        </h2>
+      </div>
+    </section>
+
+    <section class="turnkey__cta flex flex-col ai-c">
+      <a class="btn btn--primary" href="contact">Get Started
+        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.49 6L7.5 6" />
+          <path d="M2.5 1L7.95455 6L2.5 11" />
+        </svg>
+      </a>
+      <h3>You own the pods at the end</h3>
+      <h4>*2 Year Minimum Commitment & Only 6MW Available</h4>
     </section>
   </main>
 
