--- a/thanks.html
+++ b/thanks.html
@@ -208,6 +208,9 @@
           <a class="navbar__link" href="turnkey-solutions">Turn-Key Solutions</a>
         </li>
         <li>
+          <a class="navbar__link" href="press">Press</a>
+        </li>
+        <li>
           <a class="navbar__link" href="contact">Contact Us</a>
         </li>
       </ul>
